Update software.sh