@@ -1,7 +1,7 @@
 #!/bin/bash
 PMC=https://api.papermc.io/v2
 PAPERAPI="$PMC"/projects/paper/versions/
-#PURPURAPI="$PMC"/purpur/
+PURPURAPI="$PMC"/purpur/
 #SPIBUKAPI=https://hub.spigotmc.org/jenkins/job/BuildTools/lastSuccessfulBuild/artifact/target/BuildTools.jar
 #MOHISTAPI=https://mohistmc.com/api/
 #BUNGEEAPI=https://ci.md-5.net/job/BungeeCord/lastSuccessfulBuild/artifact/bootstrap/target/BungeeCord.jar
@@ -46,6 +46,34 @@ screen -d -m -L -S "$MCNAME"  /bin/bash -c "/usr/bin/java -Xms$RAM -Xmx$RAM -XX:
 exit 1
 }
 #purpur() velocity() waterfall() bungeecord() minecraft() bukkit() spigot() mohist()
+purpur) {
+mcbase
+wget -q "$PURPURAPI""$MAINVERSION" -O version.json
+LATEST=$(cat < version.json | jq -r ".builds" | grep -v "," | grep -v ":" | grep -e "[0-9]" | cut -d "\"" -f2)
+wget -q "$PURPURAPI""$MAINVERSION"/"$LATEST"/download -O "$LATEST".jar
+unzip -qq -t "$LATEST".jar
+if [ "$?" -ne 0 ]; then
+ echo "Downloaded purpur-$MAINVERSION-$LATEST.jar is corrupt. No update." | /usr/bin/logger -t "$MCNAME"
+else
+ diff -q purpur-"$MAINVERSION"-"$LATEST".jar "$MTPATH"/"$MCNAME".jar >/dev/null 2>&1
+ if [ "$?" -eq 1 ]; then
+  cp purpur-"$MAINVERSION"-"$LATEST".jar purpur-"$MAINVERSION"-"$LATEST".jar."$(date +%Y.%m.%d.%H.%M.%S)"
+  mv purpur-"$MAINVERSION"-"$LATEST".jar "$MTPATH"/"$MCNAME".jar
+  /usr/bin/find "$MTPATH"/mcsys/saves/jar/* -type f -mtime +10 -delete 2>&1 | /usr/bin/logger -t "$MCNAME"
+  echo "purpur-$MAINVERSION-$LATEST has been updated" | /usr/bin/logger -t "$MCNAME"
+  rm version.json
+ else
+  echo "No purpur-$MAINVERSION-$LATEST update neccessary" | /usr/bin/logger -t "$MCNAME"
+  rm purpur-"$MAINVERSION"-"$LATEST".jar
+  rm version.json
+ fi
+fi
+# Starting server
+cd "$MTPATH" || exit 1
+echo "Starting $MTPATH/$MCNAME.jar" | /usr/bin/logger -t "$MCNAME"
+screen -d -m -L -S "$MCNAME"  /bin/bash -c "$JAVABIN -Xms$RAM -Xmx$RAM -XX:+UseG1GC -XX:+ParallelRefProcEnabled -XX:MaxGCPauseMillis=200 -XX:+UnlockExperimentalVMOptions -XX:+DisableExplicitGC -XX:+AlwaysPreTouch -XX:G1NewSizePercent=30 -XX:G1MaxNewSizePercent=40 -XX:G1HeapRegionSize=8M -XX:G1ReservePercent=20 -XX:G1HeapWastePercent=5 -XX:G1MixedGCCountTarget=4 -XX:InitiatingHeapOccupancyPercent=15 -XX:G1MixedGCLiveThresholdPercent=90 -XX:G1RSetUpdatingPauseTimePercent=5 -XX:SurvivorRatio=32 -XX:+PerfDisableSharedMem -XX:MaxTenuringThreshold=1 -Dusing.aikars.flags=https://mcflags.emc.gs -Daikars.new.flags=true --add-modules=jdk.incubator.vector -jar $MCNAME.jar nogui"
+exit 1
+}
 
 case "$1" in
 paper) paper ;;
